hphp/test/zend/good/zend/inter_007.php.exp
HipHop Fatal error: Undefined function: class_alias in hphp/test/zend/good/zend/inter_007.php on line 11
